[package]
name = "oxy-shared"
version = "0.5.18"
authors.workspace = true
description = "Shared infrastructure and types for Oxy"
documentation.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Core async runtime
tokio = { workspace = true }
async-trait = "0.1.89"

# Database
sea-orm = { workspace = true }
entity = { path = "../entity" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = "1.0"

# Logging
tracing = { workspace = true }
log = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { version = "1.20", features = ["v4", "serde"] }
indexmap = { workspace = true }
itertools = "0.14.0"
enum_dispatch = "0.3.13"
schemars = { version = "0.8.22", features = ["derive", "impl_json_schema"] }

# HTTP/API
axum = { workspace = true }
utoipa = {git="https://github.com/haitrr/utoipa.git", rev="776f86e", features = ["uuid", "chrono", "axum_extras"] }

# AI/LLM
async-openai = { version = "0.33.0", features = ["byot", "_api"] }
secrecy = "0.10"

# Vector store
lancedb = "0.26.2"
serde_arrow = { version = "0.13.7", features = ["arrow-56"] }

# Semantic layer
oxy-semantic = { path = "../semantic" }

# Docker support
futures = "0.3"

# Sentry error tracking
sentry = { workspace = true }


[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
