[package]
name = "oxy-shared"
version.workspace = true
authors.workspace = true
description = "Shared infrastructure and types for Oxy"
documentation.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Core async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Database
sea-orm = { workspace = true }
entity = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
log = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
enum_dispatch = { workspace = true }
schemars = { workspace = true, features = ["derive", "impl_json_schema"] }

# HTTP/API
axum = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
utoipa = { workspace = true, features = ["uuid", "chrono", "axum_extras"] }

# AI/LLM
async-openai = { workspace = true, features = ["byot", "_api"] }
secrecy = { workspace = true }

# Vector store
lancedb = { workspace = true }
serde_arrow = { workspace = true, features = ["arrow-58"] }

# Semantic layer
oxy-semantic = { workspace = true }

# Docker support
futures = { workspace = true }

# Sentry error tracking
sentry = { workspace = true }


[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
wiremock = { workspace = true }
