[package]
name = "oxy-test-utils"
version = "0.5.12"
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Test utilities, fixtures, and mocks for Oxy"

[dependencies]
# Async support
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
async-trait = "0.1"

# HTTP mocking
wiremock = "0.6"

# Fixtures and temporary directories
tempfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Serial test execution (re-exported for convenience)
serial_test = "3.3"

# For creating test fixtures
uuid = { version = "1.16", features = ["v4"] }
