[package]
name = "oxy-thread"
version = "0.5.10"
authors.workspace = true
description = "Thread and conversation management for Oxy"
documentation.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# NOTE: This crate does not depend on oxy-workflow.
# The relationship is inverted: oxy-workflow depends on thread entities
# (via entity crate) through StreamingWorkflowPersister.

# Async runtime
tokio = { workspace = true }
async-trait = "0.1.89"
async-stream = "0.3.6"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = "1.0"

# Logging
tracing = { workspace = true }
log = { workspace = true }

# Database
sea-orm = { workspace = true }
entity = { path = "../entity" }

# Shared infrastructure
oxy-shared = { path = "../shared" }
oxy = { path = "../core" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
