[package]
name = "oxy-thread"
version.workspace = true
authors.workspace = true
description = "Thread and conversation management for Oxy"
documentation.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# NOTE: This crate does not depend on oxy-workflow.
# The relationship is inverted: oxy-workflow depends on thread entities
# (via entity crate) through StreamingWorkflowPersister.

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
log = { workspace = true }

# Database
sea-orm = { workspace = true }
entity = { workspace = true }

# Shared infrastructure
oxy-shared = { workspace = true }
oxy = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
